public mutable default class loader and refactoring